@@ -23,7 +23,7 @@
 
 class NetStatus: public YWindow, public YTimerListener {
 public:
-    NetStatus(YWindow *aParent = 0);
+    NetStatus(char const * netdev, YWindow *aParent = 0);
     ~NetStatus();
 private:
     YColor *color[3];
@@ -43,6 +43,7 @@ private:
 
     bool wasUp;               // previous link status
     bool useIsdn;             // netdevice is an IsdnDevice
+    char *fNetDev;		// name of the device
     
     char phoneNumber[32];
 
